[project]
name = "obsidian-knowledge-converter"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "pytest>=8.4.1", "toml==0.10.2",]

[tool.setuptools.package-data]
Obsidian_Knowledge_Converter = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
